favicon ,meta and title changed

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="I Heard A Rumor "
+      content="I Heard A Rumor is a social media platform where one can Share photos and things they heard about and want to spread that rumor. 
+      Mobile Application made with ﬂutter.  
+      Web app Made with ReactJs.
+      Back end made with go and hosted on Digital Oceanapp"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>i Heard A Rumor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
