google searchconsole cred addded

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="J3GgiaclkwtfcgnoacCGPraChmfnYgj2WHga-pzGYeE" />
     <meta
       name="I Heard A Rumor "
       content="I Heard A Rumor is a social media platform where one can Share photos and things they heard about and want to spread that rumor. 
